external pages open new tab

--- a/src/pages/dyn/contact_and_rolling.astro
+++ b/src/pages/dyn/contact_and_rolling.astro
@@ -280,7 +280,7 @@ import Col from "../../components/Col.astro"
 <SubSection title="Applications" id="app_contact_rolling"></SubSection>
 
 <SubSubSection title="Bearings"  id="app_bearings">
-    <RedText>This topic is in L27, slides 13-14. Pictures are from this book  <a href="https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955068260305899">https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955068260305899</a></RedText>
+    <RedText>This topic is in L27, slides 13-14. Pictures are from this book  <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955068260305899">https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99955068260305899</a></RedText>
 	Application for "Rolling on curved surfaces".
 
     <Image src="/Dynamics/ContactRollingFigs/AppBearings.png" width="5"></Image>
