--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -377,70 +377,70 @@ import DisplayTable from "../../components/DisplayTable.astro"
       <CalloutContainer slot="cards">
         <CalloutCard>
             <p>
-                The Greek letter ω (lowercase <a href="http://en.wikipedia.org/wiki/Omega">omega</a>) is
-                the last letter of the <a href="http://en.wikipedia.org/wiki/Greek_alphabet">Greek
+                The Greek letter ω (lowercase <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Omega">omega</a>) is
+                the last letter of the <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Greek_alphabet">Greek
                 alphabet</a>, leading to expressions such as “from alpha
                 to omega” meaning “from start to end”. Omega literally
                 means O-mega, meaning O-large, as capital Omega (written
-                Ω) developed from capital <a href="http://en.wikipedia.org/wiki/Omicron">Omicron</a>
+                Ω) developed from capital <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Omicron">Omicron</a>
                 (written Ο) by breaking the circle and turning up the
                 edges. Omicron is literally O-micron, meaning O-small, and
-                it is the ancestor of the <a href="http://en.wikipedia.org/wiki/Latin_alphabet">Latin</a>
-                letter O that we use today in <a href="http://en.wikipedia.org/wiki/English_language">English</a>.
+                it is the ancestor of the <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Latin_alphabet">Latin</a>
+                letter O that we use today in <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/English_language">English</a>.
               </p>
               <table id="greek">
                 <tr>
-                  <td>Α</td><td>α</td><td><a href="http://en.wikipedia.org/wiki/Alpha">alpha</a></td>
-                  <td>Ι</td><td>ι</td><td><a href="http://en.wikipedia.org/wiki/Iota">iota</a></td>
-                  <td>Ρ</td><td>ρ</td><td><a href="http://en.wikipedia.org/wiki/Rho">rho</a></td>
+                  <td>Α</td><td>α</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Alpha">alpha</a></td>
+                  <td>Ι</td><td>ι</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Iota">iota</a></td>
+                  <td>Ρ</td><td>ρ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Rho">rho</a></td>
                 </tr>
                 <tr>
-                  <td>Β</td><td>β</td><td><a href="http://en.wikipedia.org/wiki/Beta">beta</a></td>
-                  <td>Κ</td><td>κ</td><td><a href="http://en.wikipedia.org/wiki/Kappa">kappa</a></td>
-                  <td>Σ</td><td>σ</td><td><a href="http://en.wikipedia.org/wiki/Sigma">sigma</a></td>
+                  <td>Β</td><td>β</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Beta">beta</a></td>
+                  <td>Κ</td><td>κ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Kappa">kappa</a></td>
+                  <td>Σ</td><td>σ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Sigma">sigma</a></td>
                 </tr>
                 <tr>
-                  <td>Γ</td><td>γ</td><td><a href="http://en.wikipedia.org/wiki/Gamma">gamma</a></td>
-                  <td>Λ</td><td>λ</td><td><a href="http://en.wikipedia.org/wiki/Lambda">lambda</a></td>
-                  <td>Τ</td><td>τ</td><td><a href="http://en.wikipedia.org/wiki/Tau">tau</a></td>
+                  <td>Γ</td><td>γ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Gamma">gamma</a></td>
+                  <td>Λ</td><td>λ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Lambda">lambda</a></td>
+                  <td>Τ</td><td>τ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Tau">tau</a></td>
                 </tr>
                 <tr>
-                  <td>Δ</td><td>δ</td><td><a href="http://en.wikipedia.org/wiki/Delta_(letter)">delta</a></td>
-                  <td>Μ</td><td>μ</td><td><a href="http://en.wikipedia.org/wiki/Mu_(letter)">mu</a></td>
-                  <td>Υ</td><td>υ</td><td><a href="http://en.wikipedia.org/wiki/Upsilon">upsilon</a></td>
+                  <td>Δ</td><td>δ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Delta_(letter)">delta</a></td>
+                  <td>Μ</td><td>μ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Mu_(letter)">mu</a></td>
+                  <td>Υ</td><td>υ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Upsilon">upsilon</a></td>
                 </tr>
                 <tr>
-                  <td>Ε</td><td>ε</td><td><a href="http://en.wikipedia.org/wiki/Epsilon">epsilon</a></td>
-                  <td>Ν</td><td>ν</td><td><a href="http://en.wikipedia.org/wiki/Nu_(letter)">nu</a></td>
-                  <td>Φ</td><td>φ</td><td><a href="http://en.wikipedia.org/wiki/Phi">phi</a></td>
+                  <td>Ε</td><td>ε</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Epsilon">epsilon</a></td>
+                  <td>Ν</td><td>ν</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Nu_(letter)">nu</a></td>
+                  <td>Φ</td><td>φ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Phi">phi</a></td>
                 </tr>
                 <tr>
-                  <td>Ζ</td><td>ζ</td><td><a href="http://en.wikipedia.org/wiki/Zeta">zeta</a></td>
-                  <td>Ξ</td><td>ξ</td><td><a href="http://en.wikipedia.org/wiki/Xi_(letter)">xi</a></td>
-                  <td>Χ</td><td>χ</td><td><a href="http://en.wikipedia.org/wiki/Chi_(letter)">chi</a></td>
+                  <td>Ζ</td><td>ζ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Zeta">zeta</a></td>
+                  <td>Ξ</td><td>ξ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Xi_(letter)">xi</a></td>
+                  <td>Χ</td><td>χ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Chi_(letter)">chi</a></td>
                 </tr>
                 <tr>
-                  <td>Η</td><td>η</td><td><a href="http://en.wikipedia.org/wiki/Eta">eta</a></td>
-                  <td>Ο</td><td>ο</td><td><a href="http://en.wikipedia.org/wiki/Omicron">omicron</a></td>
-                  <td>Ψ</td><td>ψ</td><td><a href="http://en.wikipedia.org/wiki/Psi_(letter)">psi</a></td>
+                  <td>Η</td><td>η</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Eta">eta</a></td>
+                  <td>Ο</td><td>ο</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Omicron">omicron</a></td>
+                  <td>Ψ</td><td>ψ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Psi_(letter)">psi</a></td>
                 </tr>
                 <tr>
-                  <td>Θ</td><td>θ</td><td><a href="http://en.wikipedia.org/wiki/Theta">theta</a></td>
-                  <td>Π</td><td>π</td><td><a href="http://en.wikipedia.org/wiki/Pi_(letter)">pi</a></td>
-                  <td>Ω</td><td>ω</td><td><a href="http://en.wikipedia.org/wiki/Omega">omega</a></td>
+                  <td>Θ</td><td>θ</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Theta">theta</a></td>
+                  <td>Π</td><td>π</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Pi_(letter)">pi</a></td>
+                  <td>Ω</td><td>ω</td><td><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Omega">omega</a></td>
                 </tr>
               </table>
               <p class="mb-0">
                 The Greek alphabet, shown above, was the first true <a
-                href="http://en.wikipedia.org/wiki/Alphabet">alphabet</a>,
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Alphabet">alphabet</a>,
                 meaning that it has letters representing <a
-                href="http://en.wikipedia.org/wiki/Phoneme">phonemes</a>
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Phoneme">phonemes</a>
                 (basic significant sounds) and includes <a
-                href="http://en.wikipedia.org/wiki/Vowel">vowels</a> as
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Vowel">vowels</a> as
                 well as <a
-                href="http://en.wikipedia.org/wiki/Consonant">consonants</a>. The
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Consonant">consonants</a>. The
                 Greek alphabet was was derived from the earlier <a
-                href="http://en.wikipedia.org/wiki/Phoenician_alphabet">Phoenician
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Phoenician_alphabet">Phoenician
                 alphabet</a>, which was probably the original parent of
                 all alphabets. This shows that the idea of an alphabet is
                 so non-obvious that it has only ever been invented once,
@@ -563,7 +563,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
                 Angular directions have long been considered to have
                 magical or spiritual significance. In Britain the
                 counterclockwise direction was once known
-                as <a href="https://en.wikipedia.org/wiki/Widdershins">widdershins</a>,
+                as <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/Widdershins">widdershins</a>,
                 and it was considered unlucky to travel around a church in
                 a widdershins direction.
               </p>
@@ -580,7 +580,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
                     T. H. Blau.
                     Torque and schizophrenic vulnerability.
                     <i>American Psychologist</i>, 32(12):997–1005, 1977.
-                    DOI: <a href="http://dx.doi.org/10.1037/0003-066X.32.12.997">10.1037/0003-066X.32.12.997</a>.
+                    DOI: <a target="_blank" rel="noopener noreferrer" href="http://dx.doi.org/10.1037/0003-066X.32.12.997">10.1037/0003-066X.32.12.997</a>.
                   </Item>
                 </Itemize>
               </div>
@@ -851,13 +851,13 @@ import DisplayTable from "../../components/DisplayTable.astro"
       <p class="mb-0">
         The tangential/normal basis is also called the
         Frenet–Serret frame after <a
-        href="http://en.wikipedia.org/wiki/Jean_Fr%C3%A9d%C3%A9ric_Frenet">Jean
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Jean_Fr%C3%A9d%C3%A9ric_Frenet">Jean
         Frédéric Frenet</a> and <a
-        href="http://en.wikipedia.org/wiki/Joseph_Alfred_Serret">Joseph
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Joseph_Alfred_Serret">Joseph
         Alfred Serret</a>, who discovered it independently around
         1850. The equations <a href="#rkt-ed">#rkt-ed</a> for the
         basis derivatives are often called the <a
-        href="http://en.wikipedia.org/wiki/Frenet%E2%80%93Serret_formulas">Frenet-Serret
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Frenet%E2%80%93Serret_formulas">Frenet-Serret
         formulas</a>, typically written in terms of \(s\) derivatives:
       </p>
 
@@ -868,7 +868,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
       </p>
       <DisplayEquation equation="\\frac{1}{v} \\vec{\\omega} = \\tau\\,\\hat{e}_t + \\kappa\\,\\hat{e}_b," />
       <p  class="mb-0">
-        which is known as the <a href="http://en.wikipedia.org/wiki/Darboux_vector">Darboux vector</a> after its discoverer, <a href="http://en.wikipedia.org/wiki/Gaston_Darboux">Jean Gaston Darboux</a>.
+        which is known as the <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Darboux_vector">Darboux vector</a> after its discoverer, <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Gaston_Darboux">Jean Gaston Darboux</a>.
       </p>
     </CalloutCard>
   </CalloutContainer>
@@ -1174,7 +1174,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <th>Earth spin</th>
         <th>Earth orbit</th>
         <th>Milky Way</th>
-        <th>Through <a href="http://en.wikipedia.org/wiki/Cosmic_microwave_background">CMB</a></th>
+        <th>Through <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Cosmic_microwave_background">CMB</a></th>
       </tr>
     </thead>
     <tbody class='row-spacing' style="font-size: 1rem;">
@@ -1257,23 +1257,23 @@ import DisplayTable from "../../components/DisplayTable.astro"
         The first people to have a rough idea of the radius of the
         Earth and the distance to the Sun were the ancient
         Greeks. <a
-        href="http://en.wikipedia.org/wiki/Eratosthenes">Eratosthenes</a>
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Eratosthenes">Eratosthenes</a>
         (276–195 BCE) computed the radius of the Earth to be
         40 000 <a
-        href="http://en.wikipedia.org/wiki/Stadion_(unit_of_length)">stadia</a>
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Stadion_(unit_of_length)">stadia</a>
         (6800 km) by measuring the difference in Sun angle between
-        <a href="http://en.wikipedia.org/wiki/Aswan">Aswan</a> and
+        <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Aswan">Aswan</a> and
         <a
-        href="http://en.wikipedia.org/wiki/Alexandria">Alexandria</a>.
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Alexandria">Alexandria</a>.
       </p>
       <p class="mb-0">
         <a
-        href="http://en.wikipedia.org/wiki/Aristarchus_of_Samos">Aristarchus
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Aristarchus_of_Samos">Aristarchus
         of Samos</a> (310–230 BCE) obtained the <a
-        href="http://en.wikipedia.org/wiki/Aristarchus_On_the_Sizes_and_Distances">first
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Aristarchus_On_the_Sizes_and_Distances">first
         estimates</a> of the distance to the Sun by using
         observations of lunar eclipses and solar <a
-        href="http://en.wikipedia.org/wiki/Parallax">parallax</a>. While
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Parallax">parallax</a>. While
         his method was in principle correct, poor observational
         data meant that his computed Earth-Sun distance was quite
         inaccurate.
@@ -1332,7 +1332,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
       Earth, not drawn to scale. The fact that <InlineEquation equation="\\omega_{\\rm E}" />
       and <InlineEquation equation="\\omega_{\\rm S}" /> are in the same direction means that
       sidereal days are shorter than solar days (this is <a
-      href="http://en.wikipedia.org/wiki/Nebular_hypothesis">not
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Nebular_hypothesis">not
       a coincidence</a>).
     </p>
   </PrairieDrawCanvas>
@@ -1360,7 +1360,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         365.242189 solar days (about 20 minutes shorter than the
         sidereal year). These years are different because of the
         <a
-        href="http://en.wikipedia.org/wiki/Axial_precession">axial
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Axial_precession">axial
         precession</a> of the Earth.
       </p>
       <p class=mb-0>
@@ -1374,7 +1374,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         
       <p>
         This is why leap years in our <a
-        href="http://en.wikipedia.org/wiki/Gregorian_calendar">Gregorian
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Gregorian_calendar">Gregorian
         calendar</a> add an extra day every 4 years, unless the
         year is a whole century, except every 400 years. If our
         calendar used sidereal years instead of tropical, the fact
@@ -1392,7 +1392,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         and geologic events such as glacier formation and mass
         redistribution in the mantle, both of which change the
         Earth's moment of inertia. To correct for these variations
-        a <a href="http://en.wikipedia.org/wiki/Leap_second">leap
+        a <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Leap_second">leap
         second</a> is occasionally added, in which the last minute
         of the day has 61 seconds.
       </p>
