--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -115,7 +115,7 @@ import Warning from "../../components/Warning.astro"
         out-of-plane direction.
       </p>
 	  
-	  <BlueText> Add animation from <a href="https://mechref.engr.illinois.edu/dyn/rkg.html"> here </a>.
+	  <BlueText> Add animation from <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rkg.html"> here </a>.
 	  
 	  
 	  <Warning title="Labeling angular quantities on rigid bodies." id="rkg-ww">
@@ -144,16 +144,16 @@ import Warning from "../../components/Warning.astro"
                 rotations can be represented:
               </p>
               <Enumerate>
-                <Item><a href="http://en.wikipedia.org/wiki/Euler_angles">Euler angles</a></Item>
-                <Item><a href="http://en.wikipedia.org/wiki/Rotation_matrix">Rotation matrices</a></Item>
-                <Item><a href="http://en.wikipedia.org/wiki/Quaternions">Quaternions</a></Item>
+                <Item><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Euler_angles">Euler angles</a></Item>
+                <Item><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Rotation_matrix">Rotation matrices</a></Item>
+                <Item><a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Quaternions">Quaternions</a></Item>
               </Enumerate>
               <p>
                 Detailed study of rotations in 3D is necessary for a full
                 understanding of topics ranging from <a
-                href="http://en.wikipedia.org/wiki/Attitude_control_(spacecraft)">satellite
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Attitude_control_(spacecraft)">satellite
                 attitude control</a> to <a
-                href="http://en.wikipedia.org/wiki/Articulated_robot">articulated
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Articulated_robot">articulated
                 robot construction</a>, and is usually covered in advanced
                 dynamics courses.
               </p>
@@ -162,15 +162,15 @@ import Warning from "../../components/Warning.astro"
 </SubSection>
 
 <SubSection title="Points on rigid bodies">
-    <BlueText>Copy content from <a href="https://mechref.engr.illinois.edu/dyn/rkg.html"> here </a> </BlueText>
+    <BlueText>Copy content from <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rkg.html"> here </a> </BlueText>
 </SubSection>
 
 <SubSection title="Rigid bodies in 2D">
-    <BlueText>Copy content from <a href="https://mechref.engr.illinois.edu/dyn/rkg.html"> here </a> </BlueText>
+    <BlueText>Copy content from <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rkg.html"> here </a> </BlueText>
 </SubSection>
 
 <SubSection title="Constrained motion">
-    <BlueText>Copy content from <a href="https://mechref.engr.illinois.edu/dyn/rkc.html"> here </a> </BlueText>
+    <BlueText>Copy content from <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rkc.html"> here </a> </BlueText>
 </SubSection>
 
 <SubSection title="Gears">
@@ -193,15 +193,15 @@ import Warning from "../../components/Warning.astro"
 <SubSection title="Applications"></SubSection>
 
 <SubSubSection title="Steering geometry">
-    <BlueText>Complete in <a href="https://mechref.engr.illinois.edu/dyn/avs.html">"Steering geometry"</a>.</BlueText> This refers to "Rigid Bodies".
+    <BlueText>Complete in <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/avs.html">"Steering geometry"</a>.</BlueText> This refers to "Rigid Bodies".
 </SubSubSection>
 
 <SubSubSection title="Knee Joint">
-    <BlueText>Complete in <a href="https://mechref.engr.illinois.edu/dyn/aml.html"> "Four-Bar Linkages" </a> under the subtitle "Example: Knee joint (constrained motion)".</BlueText> This refers to "Constrained motion".
+    <BlueText>Complete in <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/aml.html"> "Four-Bar Linkages" </a> under the subtitle "Example: Knee joint (constrained motion)".</BlueText> This refers to "Constrained motion".
 </SubSubSection>
 
 <SubSubSection title="Suspensions with Watt's linkage">
-    <BlueText>Complete in <a href="https://mechref.engr.illinois.edu/dyn/aml.html"> "Four-Bar Linkages" </a> under the subtitle "Example: Suspensions with Watt's linkage (constrained motion)".</BlueText> This refers to "Constrained motion".
+    <BlueText>Complete in <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/aml.html"> "Four-Bar Linkages" </a> under the subtitle "Example: Suspensions with Watt's linkage (constrained motion)".</BlueText> This refers to "Constrained motion".
 </SubSubSection>
 
 
