--- a/src/pages/dyn/vectors.astro
+++ b/src/pages/dyn/vectors.astro
@@ -179,14 +179,14 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
                 While the idea of \(x,y\) coordinates specifying positions
                 might seem obvious, the use of algebraic quantities to
                 define geometry in this way was a major discovery of <a
-                href="http://en.wikipedia.org/wiki/Ren%C3%A9_Descartes">René
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Ren%C3%A9_Descartes">René
                 Descartes</a> and a key event in the <a
-                href="http://en.wikipedia.org/wiki/Scientific_Revolution">scientific
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Scientific_Revolution">scientific
                 revolution</a>. Descartes was also instrumental in
                 establishing the philosophical groundwork of <a
-                href="http://en.wikipedia.org/wiki/Age_of_Enlightenment">The
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Age_of_Enlightenment">The
                 Enlightenment</a>, and we owe to him the famous phrase <a
-                href="http://en.wikipedia.org/wiki/Cogito_ergo_sum">“<em>Cogito
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Cogito_ergo_sum">“<em>Cogito
                 ergo sum</em>”</a>.
               </p>
         </CalloutCard>
@@ -249,22 +249,22 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <CalloutCard>
             <p>
                 Angles can be measured in many different units. While <a
-                href="http://en.wikipedia.org/wiki/Radian">radians</a> are
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Radian">radians</a> are
                 the most mathematically elegant unit, their use dates only
                 from <a
-                href="http://en.wikipedia.org/wiki/Roger_Cotes">Roger
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Roger_Cotes">Roger
                 Cotes</a> in the 18th century. <a
-                href="http://en.wikipedia.org/wiki/Degree_(angle)">Degrees</a>
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Degree_(angle)">Degrees</a>
                 are a much older unit, dating back to the <a
-                href="http://en.wikipedia.org/wiki/Sexagesimal">sexagesimal</a>
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Sexagesimal">sexagesimal</a>
                 number system of the ancient <a
-                href="http://en.wikipedia.org/wiki/Babylonia">Babylonians</a>,
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Babylonia">Babylonians</a>,
                 and are convenient for celestial calculations because
                 there are approximately 360 days in one year. Other units
                 include <a
-                href="http://en.wikipedia.org/wiki/Gradian">grads</a> (100
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Gradian">grads</a> (100
                 grads in a right angle) and <a
-                href="http://en.wikipedia.org/wiki/Angular_mil">mils</a>
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Angular_mil">mils</a>
                 (various definitions, all approximately equal to a
                 milliradian).
               </p>
@@ -282,7 +282,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
               </p>
               <p>
                 An alternative is to use
-                the <a href="http://en.wikipedia.org/wiki/Atan2">atan2</a>
+                the <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Atan2">atan2</a>
                 function, which takes \(x\) and \(y\) as separate arguments
                 and correctly handles the conversion to \(\theta\) in any
                 quadrant. This function is available in all common
@@ -339,19 +339,19 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <CalloutCard>
             <p>
                 The <a
-                href="http://en.wikipedia.org/wiki/International_System_of_Units">SI
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/International_System_of_Units">SI
                 unit system</a> is the definitive system of measurement
                 used in science and engineering. Other systems, such as <a
-                href="http://en.wikipedia.org/wiki/U.S._customary_unit">U.S. customary
+                target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/U.S._customary_unit">U.S. customary
                 units</a> are defined in terms of SI units, so that an
                 inch is defined to be exactly 2.54 cm, for example.
               </p>
               <p>
                 The National Institute of Standards and Technology (NIST)
                 maintains an excellent <a
-                href="http://physics.nist.gov/cuu/Units/index.html">reference
+                target="_blank" rel="noopener noreferrer" href="http://physics.nist.gov/cuu/Units/index.html">reference
                 guide</a> to SI units, including precise <a
-                href="http://physics.nist.gov/cuu/Units/checklist.html">rules
+                target="_blank" rel="noopener noreferrer" href="http://physics.nist.gov/cuu/Units/checklist.html">rules
                 and style conventions</a> for writing units in scientific
                 and engineering work.
               </p>
@@ -439,7 +439,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <p>
       We draw the symbol \(\odot\) (arrow tip) to indicate a vector
       coming out of the page, and \(\otimes\) (arrow <a
-      href="http://en.wikipedia.org/wiki/Fletching">fletching</a>)
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Fletching">fletching</a>)
       to indicate an arrow going into the page.
     </p>
 
@@ -472,15 +472,15 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <p>
           The use of the letter \(i,j,k\) for basis vectors is due to
           <a
-          href="http://en.wikipedia.org/wiki/William_Rowan_Hamilton">William
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/William_Rowan_Hamilton">William
           Hamilton</a>, who was motivated by thinking of basis
           vectors as extensions of the complex number \(i\). This
           notation was popularized by the book <a
-          href="http://en.wikipedia.org/wiki/Vector_Analysis_(Gibbs/Wilson)"><i>Vector
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Vector_Analysis_(Gibbs/Wilson)"><i>Vector
           Analysis: A Text Book for the Use of Students of
           Mathematics and Physics Founded upon the Lectures of
           J. Willard Gibbs</i></a> (1901), by <a
-          href="http://en.wikipedia.org/wiki/Edwin_Bidwell_Wilson">E. B. Wilson</a>. This
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Edwin_Bidwell_Wilson">E. B. Wilson</a>. This
           book also introduced the use of bold letters to represent
           vectors.
         </p>
@@ -566,16 +566,16 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <p>
       Sets of three integers \(a,b,c\) where \(a^2 + b^2 = c^2\) are
       called <a
-      href="http://en.wikipedia.org/wiki/Pythagorean_triples"><em>Pythagorean
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Pythagorean_triples"><em>Pythagorean
       triples</em></a>. A long list of such triples is given on
       the <a
-      href="http://en.wikipedia.org/wiki/Plimpton_322">Plimpton
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Plimpton_322">Plimpton
       322</a> clay tablet written by the ancient Babylonians
       around 1800 BCE, although it is unclear how they generated
       these numbers. Pythagorean triples lead to complex
       mathematics, including the curious patterns shown below
       and <a
-      href="http://en.wikipedia.org/wiki/Fermat's_Last_Theorem">Fermat's
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Fermat's_Last_Theorem">Fermat's
       Last Theorem</a>.
     </p>
 
@@ -1492,7 +1492,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       Geographic coordinates are typically given
       in <a href="rvs.html">spherical coordinates</a>, but without
       the radius and with the angles given
-      in <a href="http://en.wikipedia.org/wiki/Arcminute">degrees,
+      in <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Arcminute">degrees,
       minutes, and seconds</a>, with the latitude first, and the
       direction given as North/South or East/West rather than
       positive/negative. Also note that latitude is the elevation
@@ -1530,11 +1530,11 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <p>
           To get an idea of what it looks like to fly along a great
           circle path, we can view the <a
-          href="http://eol.jsc.nasa.gov/Videos/CrewEarthObservationsVideos/">crew
+          target="_blank" rel="noopener noreferrer" href="http://eol.jsc.nasa.gov/Videos/CrewEarthObservationsVideos/">crew
           movies</a> taken from the <a
-          href="http://en.wikipedia.org/wiki/International_Space_Station">ISS</a>. The
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/International_Space_Station">ISS</a>. The
           movies taken at night are especially evocative, such as <a
-          href="http://vimeo.com/32001208">this montage</a> by
+          target="_blank" rel="noopener noreferrer" href="http://vimeo.com/32001208">this montage</a> by
           Michael König.
         </p>
         <p>
@@ -1623,7 +1623,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
   <CalloutCard title="Reference material">
     <p>
       There are many different <a
-      href="http://en.wikipedia.org/wiki/Map_projection">map
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Map_projection">map
       projections</a> that draw the surface of the spherical
       Earth on a two-dimensional map. Because the sphere is
       curved, a map projection cannot preserve both areas and
@@ -1636,33 +1636,33 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </Center>
     <p>
       <input type="radio" name="aoa-fp-c-projection" value="equirectangular" class="data-input:aos-fp-c:projection" onclick="aos_fp_c.setOption('projection', this.value);" checked/>
-      <a href="http://en.wikipedia.org/wiki/Equirectangular_projection">Equirectangular</a>.
+      <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Equirectangular_projection">Equirectangular</a>.
       <DisplayEquation equation="x = \\lambda, \\quad      y = \\phi" />
     </p>
     <p>
       <input type="radio" name="aoa-fp-c-projection" value="mercator" class="data-input:aos-fp-c:projection" onclick="aos_fp_c.setOption('projection', this.value);" />
       <a
-          href="http://en.wikipedia.org/wiki/Mercator_projection">Mercator</a>:
-      cylindrical, <a href="http://en.wikipedia.org/wiki/Conformal_map">conformal</a> (angle-preserving).
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Mercator_projection">Mercator</a>:
+      cylindrical, <a target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Conformal_map">conformal</a> (angle-preserving).
       <DisplayEquation equation="x = \\lambda, \\quad y = \\log\\left(\\tan\\Big(\\frac{\\pi}{4} + \\frac{\\phi}{2}\\Big)\\right)      " />
     </p>
     <p>
       <input type="radio" name="aoa-fp-c-projection" value="hobo-dyer" class="data-input:aos-fp-c:projection" onclick="aos_fp_c.setOption('projection', this.value);"/>
       <a
-          href="http://en.wikipedia.org/wiki/Hobo%E2%80%93Dyer_projection">Hobo-Dyer</a>:
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Hobo%E2%80%93Dyer_projection">Hobo-Dyer</a>:
       cylindrical, area-preserving.
       <DisplayEquation equation="x = \\lambda, \\quad y = \\frac{\\sin\\phi}{\\cos^2(37.5^\\circ)}      " />
     </p>
     <p>
       <input type="radio" name="aoa-fp-c-projection" value="winkel" class="data-input:aos-fp-c:projection" onclick="aos_fp_c.setOption('projection', this.value);"/>
       <a
-          href="http://en.wikipedia.org/wiki/Winkel_tripel_projection">Winkel
+          target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Winkel_tripel_projection">Winkel
       tripel</a>: non-cylindrical, compromise.
       <DisplayEquation equation="\\begin{aligned}\\small      x &amp;= \\frac{1}{2} \\left(\\lambda \\cos\\phi_1 + \\frac{2\\cos\\phi\\sin\\frac{\\lambda}{2}}{{\\rm sinc}\\,\\alpha}\\right) \\\\      y &amp;= \\frac{1}{2} \\left(\\phi + \\frac{\\sin\\phi}{{\\rm sinc}\\,\\alpha}\\right) \\\\      \\alpha &amp;= \\arccos\\Big(\\cos\\phi \\cos\\frac{\\lambda}{2}\\Big) \\\\      \\phi_1 &amp;= \\arccos\\frac{2}{\\pi}      \\end{aligned}     " />
     </p>
     <p>
       You might also be interested in what your choice of map
-      projection <a href="http://xkcd.com/977/">says about your
+      projection <a target="_blank" rel="noopener noreferrer" href="http://xkcd.com/977/">says about your
       personality</a>.
     </p>
   </CalloutCard>
@@ -1732,7 +1732,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         Earth bulges outwards so the center is further from the
         equator than from the poles. A shape that better
         approximates the true Earth is thus an <a
-        href="http://en.wikipedia.org/wiki/Reference_ellipsoid">ellipsoid</a>,
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Reference_ellipsoid">ellipsoid</a>,
         given by:
         <DisplayEquation equation="\\left(\\frac{x}{R_{\\rm xy}}\\right)^2+ \\left(\\frac{y}{R_{\\rm xy}}\\right)^2+ \\left(\\frac{z}{R_{\\rm z}}\\right)^2 = 1,      " />
         where <InlineEquation equation="R_{\\rm xy} = 6378\\rm\\ km" /> and <InlineEquation equation="\R_{\\rm z} = 6357\\rm\\ km." />
@@ -1741,7 +1741,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         Computing shortest path distances on ellipsoids turns out
         to be much harder than shortest paths on spheres. One set
         of equations for doing this are known as <a
-        href="http://en.wikipedia.org/wiki/Vincenty%27s_formulae">Vincenty's
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Vincenty%27s_formulae">Vincenty's
         formulae</a>.
       </p>
       <p>
@@ -1749,16 +1749,16 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         Earth. Instead there are many different ellipsoids in use,
         each of which fit the Earth better near different
         countries (e.g., <a
-        href="http://en.wikipedia.org/wiki/North_American_Datum">NAD
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/North_American_Datum">NAD
         83</a> for North America and <a
-        href="https://en.wikipedia.org/wiki/World_Geodetic_System">WGS
+        target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://en.wikipedia.org/wiki/World_Geodetic_System">WGS
         84</a> for GPS world-wide). When even more accuracy is
         needed, such as for satellite orbit modeling, then true <a
-        href="http://en.wikipedia.org/wiki/Geoid">geoid</a> models
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Geoid">geoid</a> models
         are used, with <a
-        href="http://en.wikipedia.org/wiki/Spherical_harmonics">spherical
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Spherical_harmonics">spherical
         harmonic expansions</a> determined from <a
-        href="http://en.wikipedia.org/wiki/Gravity_Recovery_and_Climate_Experiment">satellite
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Gravity_Recovery_and_Climate_Experiment">satellite
         gravity measurements</a>.
       </p>
     </CalloutCard>
