--- a/src/pages/dyn/work_and_energy.astro
+++ b/src/pages/dyn/work_and_energy.astro
@@ -60,11 +60,11 @@ import DisplayTable from "../../components/DisplayTable.astro"
 <SubSection title="Energy"  id="energy">
 
 <SubSubSection title="Potential Energy" id="potential_energy" >
-<BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/ren.html"> Potential energy </a> subsection here. </BlueText>
+<BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/ren.html"> Potential energy </a> subsection here. </BlueText>
 </SubSubSection>
 
 <SubSubSection title="Kinetic Energy" id="kinetic_energy" >
-<BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/ren.html"> Kinetic energy </a> subsection here. </BlueText>
+<BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/ren.html"> Kinetic energy </a> subsection here. </BlueText>
 </SubSubSection>
 
 <SubSubSection title="Summary" id="energy_summary">
@@ -80,12 +80,12 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </SubSubSection>
 
 <SubSubSection title="Work done by a Force"  id="work_force">
-	<BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/ren.html"> Work, Forces and Moments </a> subsection here. </BlueText>
+	<BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/ren.html"> Work, Forces and Moments </a> subsection here. </BlueText>
     <Image src="/Dynamics/WorkEnergyFigs/WorkExample.png" width="7"></Image>
 </SubSubSection>
 
 <SubSubSection title="Conservative vs Non-conservative forces"  id="conserv_nonconserv_forces">
-	<BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/ren.html"> Conservative vs non-conservative forces </a> subsection here. </BlueText>
+	<BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/ren.html"> Conservative vs non-conservative forces </a> subsection here. </BlueText>
 </SubSubSection>
 
 <SubSubSection title="Work done by Friction"  id="work_friction">
@@ -113,17 +113,17 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
 
 <SubSection title="Momentum"  id="momentum">
-    <BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/rec.html"> Momentum </a> subsection here  (first subsection). </BlueText>
+    <BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rec.html"> Momentum </a> subsection here  (first subsection). </BlueText>
 </SubSection>
 
 
 
 <SubSection title="Impulse" id="impulse">
-    <BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/rec.html"> Impulse </a> subsection here. </BlueText>
+    <BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rec.html"> Impulse </a> subsection here. </BlueText>
 </SubSection>
 
 <SubSection title="Collisions" id="collisions">
-    <BlueText> Copy <a href="https://mechref.engr.illinois.edu/dyn/rec.html"> Collisions </a> subsection here. </BlueText>
+    <BlueText> Copy <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rec.html"> Collisions </a> subsection here. </BlueText>
 </SubSection>
 
 <SubSection title="Applications"  id="app_work_energy">
