--- a/src/pages/sta/cartesian_coordinates.astro
+++ b/src/pages/sta/cartesian_coordinates.astro
@@ -129,7 +129,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
       <p>
         We draw the symbol \(\odot\) (arrow tip) to indicate a vector
         coming out of the page, and \(\otimes\) (arrow <a
-        href="http://en.wikipedia.org/wiki/Fletching">fletching</a>)
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Fletching">fletching</a>)
         to indicate an arrow going into the page.
       </p>
   
