--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -469,7 +469,7 @@ Alternatively, the vector components can be determined geometrically via the ang
   <Warning title="The cross product is not associative." id="rvv-wc">
     <p>
       The cross product is not <a
-      href="http://en.wikipedia.org/wiki/Associative_property">associative</a>,
+      target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Associative_property">associative</a>,
       meaning that in general
 
       <DisplayEquation equation="\\vec{a} \\times (\\vec{b} \\times \\vec{c})        \\ne (\\vec{a} \\times \\vec{b}) \\times \\vec{c}." />
