--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -242,7 +242,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <Warning title="The cross product is not associative." id="rvv-wc">
       <p>
         The cross product is not <a
-        href="http://en.wikipedia.org/wiki/Associative_property">associative</a>,
+        target="_blank" rel="noopener noreferrer" href="http://en.wikipedia.org/wiki/Associative_property">associative</a>,
         meaning that in general
 
         <DisplayEquation equation="\\vec{a} \\times (\\vec{b} \\times \\vec{c})        \\ne (\\vec{a} \\times \\vec{b}) \\times \\vec{c}." />
