--- a/src/pages/sta/trusses.astro
+++ b/src/pages/sta/trusses.astro
@@ -83,7 +83,7 @@ Zero force members are members in a truss structure that experience no force. Th
    Drawing free-body diagrams on trusses is simple. As mentioned in the beginning, we will choose the entire truss as our system and draw the free-body diagram to determine the reaction forces on pinned/roller joints. Note we will need more equations and free-body diagrams on individual truss members to fully determine the reaction forces. See statics reference pages on how that is done. The following is a diagram showcasing eliminating zero-force members as well as the free-body diagram on the truss.
 	</p>
 
-<BlueText> Insert animation animation here, it in the trusses subsection <a href="https://mechref.engr.illinois.edu/dyn/rfb.html#rfb-zf"> here </a> </BlueText>
+<BlueText> Insert animation animation here, it in the trusses subsection <a target="_blank" rel="noopener noreferrer" target="_blank" rel="noopener noreferrer" href="https://mechref.engr.illinois.edu/dyn/rfb.html#rfb-zf"> here </a> </BlueText>
 
 </SubSection>
 
